# scobca1-fpga-test

./: CMakeLists.txt  Kconfig  Makefile  README.md  README.org  app.overlay  prj.conf  west.yaml  west.yml
scripts/: can_tool.sh  fpga_pwron.sh  pdi_start.sh  uio_test.sh
scripts/wireshark/: stpc.lua
src/: .can_test.h.swp  bhm_test.c  bhm_test.h  bridge_test.c  bridge_test.h  can.c  can.h  can_test.c  can_test.h  common.c  common.h  general_timer_reg.h  hardware_options_test.c  hardware_options_test.h  hrmem_test.c  hrmem_test.h  i2c_ext_crack_test.c  i2c_ext_crack_test.h  i2c_test.c  i2c_test.h  irq.c  irq.h  longrun_test.c  longrun_test.h  main.c  mcp2517fd.h  memory_bridge_test.c  memory_bridge_test.h  pdi.c  pdi.h  pudc_crack_test.c  pudc_crack_test.h  qspi_bridge_test.c  qspi_bridge_test.h  qspi_common.c  qspi_common.h  qspi_fram_test.c  qspi_fram_test.h  qspi_norflash_test.c  qspi_norflash_test.h  (+30 more)
trch/: Makefile
trch/src/: main.c  spi.c  test.c  test.h  trch.h  usart.c
