# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

set(BOARD scobc_module1)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(scobca1-fpga-test)

target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/common.c)
target_sources(app PRIVATE src/can.c)
target_sources(app PRIVATE src/irq.c)
target_sources(app PRIVATE src/watchdog.c)
target_sources(app PRIVATE src/i2c_test.c)
target_sources(app PRIVATE src/hrmem_test.c)
target_sources(app PRIVATE src/qspi_common.c)
target_sources(app PRIVATE src/qspi_norflash_test.c)
target_sources(app PRIVATE src/qspi_fram_test.c)
target_sources(app PRIVATE src/test_register.c)
target_sources(app PRIVATE src/usb_crack_test.c)
target_sources(app PRIVATE src/pudc_crack_test.c)
target_sources(app PRIVATE src/sys_clock_crack_test.c)
target_sources(app PRIVATE src/user_io_crack_test.c)
target_sources(app PRIVATE src/sram_addr_crack_test.c)
target_sources(app PRIVATE src/sram_byte_crack_test.c)
target_sources(app PRIVATE src/sram_err_crack_test.c)
target_sources(app PRIVATE src/sram_data_crack_test.c)
target_sources(app PRIVATE src/user_io_bridge_test.c)
target_sources(app PRIVATE src/memory_bridge_test.c)
target_sources(app PRIVATE src/qspi_bridge_test.c)
target_sources(app PRIVATE src/can_test.c)
target_sources(app PRIVATE src/bhm_test.c)
target_sources(app PRIVATE src/longrun_test.c)
target_sources(app PRIVATE src/trch_test.c)
target_sources(app PRIVATE src/pdi.c)
target_sources(app PRIVATE src/hardware_options_test.c)
